Added Menu and responsive query

--- a/index.html
+++ b/index.html
@@ -18,11 +18,88 @@
             <li class="nav__link"><a href="https://github.com/alemz-li" target="_blank">Github </a></li>
         </ul>
       </div>
-      <div class="nav__theme-toggler">
-        <span class="material-symbols-rounded active">dark_mode</span>
-        <span class="material-symbols-rounded">light_mode</span>
+      <div class="nav__options">
+        <div class="nav__theme-toggler">
+          <span class="material-symbols-rounded active">dark_mode</span>
+          <span class="material-symbols-rounded">light_mode</span>
+        </div>
+        <div class="nav__menu-toggler">
+          <span class="material-symbols-rounded active">menu</span>
+        </div>
       </div>
     </nav>
+        <!-- Dynamic menu -->
+        <div class="menu">
+          <div class="menu__close"> <span class="close-btn material-symbols-rounded">close</span></div>
+          <div class="menu__links">
+            <ul class="nav__links">
+              <li class="nav__link"><a href="#">About</a></li>
+              <li class="nav__link"><a href="https://github.com/alemz-li" target="_blank">Github </a></li>
+          </ul>
+          </div>
+          <div class="menu__content">
+          <h2>Workspace Components</h2>
+            <ul class="component__list visible">
+              <li class="component__item">
+                <a href="#desk" class="component__title">Desk <span class="material-symbols-rounded">desk</span></a>
+                <div class="component__name">Autonomous Standing Desk</div>
+              </li>
+              <li class="component__item">
+                <a href="#chair" class="component__title">Chair <span class="material-symbols-rounded">
+                  chair_alt</span></a>
+                <div class="component__name">Haworth Zody</div>
+              </li>
+              <li class="component__item">
+                <a href="#main-monitor" class="component__title">Main monitor <span class="material-symbols-rounded">monitor</span>            
+                  </a>
+                <div class="component__name">Samsung 34 inch ultrawide monitor</div>
+              </li>
+              <li class="component__item">
+                <a href="#secondary-monitor" class="component__title">Secondary monitor <span class="material-symbols-rounded">monitor</span></a>
+                <div class="component__name">DELL 27 inch gaming monitor</div>
+              </li>
+              <li class="component__item">
+                <a href="#monitor-arm" class="component__title">Monitor arm <span class="material-symbols-rounded">shopping_bag</span></a>
+                <div class="component__name">HUANUO dual monitor arm</div>
+              </li>
+              <li class="component__item">
+                <a href="#pc" class="component__title">Computer <span class="material-symbols-rounded">computer</span></a>
+                <div class="component__name">Ryzen 5 3600 32GB RTX 3070</div>
+              </li>
+              <li class="component__item">
+                <a href="#keyboard" class="component__title">Keyboard <span class="material-symbols-rounded">keyboard</span></a>
+                <div class="component__name">Keychron K12</div>
+              </li>
+              <li class="component__item">
+                <a href="#mouse" class="component__title">Mouse <span class="material-symbols-rounded">mouse</span></a></a>
+                <div class="component__name">Logitech MX Master 3</div>
+              </li>
+              <li class="component__item">
+                <a href="#headset" class="component__title">Headset <span class="material-symbols-rounded">headset</span></a></a>
+                <div class="component__name">HyperX cloud stinger</div>
+              </li>
+              <li class="component__item">
+                <a href="#storage" class="component__title">Storage <span class="material-symbols-rounded">shopping_bag</span></a></a>
+                <div class="component__name">IKEA Alex Drawer</div>
+              </li>
+            </ul>
+            <h3>Additional stuff</h3>
+            <ul class="component__list visible">
+              <li class="component__item">
+                <a href="#lighting" class="component__title">Lighting <span class="material-symbols-rounded">emoji_objects</span></a>
+                <div class="component__name">Baseus Monitor Light Bar</div>
+              </li>
+              <li class="component__item">
+                <a href="#keyboard2" class="component__title">Keyboard <span class="material-symbols-rounded">keyboard</span></a>
+                <div class="component__name">MX Keys</div>
+              </li>
+              <li class="component__item">
+                <a href="#laptop" class="component__title">Laptop <span class="material-symbols-rounded">laptop_windows</span></a>
+                <div class="component__name">DELL G15</div>
+              </li>
+            </ul>
+          </div>
+        </div>
     <header>
       <div>
         <h1>Workspace setup as a Software Engineer</h1>
@@ -53,7 +130,7 @@
         <h2>Workspace Components</h2>
         <ul class="component__list">
           <li class="component__item">
-            <a href="#desk" class="component__title" id="desk">Desk <span class="material-symbols-rounded">desk</span></a>
+            <a href="#desk" class="component__title">Desk <span class="material-symbols-rounded">desk</span></a>
             <div class="component__name">Autonomous Standing Desk</div>
           </li>
           <li class="component__item">
@@ -198,5 +275,6 @@
       </article>
       </section>
     </main>
+
   </body>
 </html>
